<resources>
    <string name="app_name">My Application</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicar">X</string>
    <string name="division">/</string>
    <string name="resultado">Resultado:</string>
    <string name="introducirValo1">Introduce PRIMER valor:</string>
    <string name="introducirValo2">Introducir SEGUNDO valor:</string>
    <string name="titulo">EJERCICIOS</string>
    <string name="botonCalculadora">Calculadora</string>
    <string name="botonFondoPantalla">Fondo de pantalla</string>
    <string name="botonComprobarDNI">Comprobar DNI</string>
    <string name="botonDomotica">Domotica FAKE</string>
    <string name="botonLogos">Logos</string>
    <string name="botonYahoo">YAHOO</string>
    <string name="botonBing">BING</string>
    <string name="botonGoogle">GOOGLE</string>
    <string name="introDNI">Introduce un DNI:</string>
    <string name="valiDNI">VALIDAR DNI</string>
    <string name="nDNI">Numero DNI</string>
    <string name="letra">Letra</string>
    <string name="palito">-</string>
    <string name="correcto">Valido</string>
    <string name="incorrecto">Invalido</string>
    <string name="Encender">Encender luces</string>
    <string name="colorluces">Color Luces</string>
    <string name="respiracion">Respiracion</string>
    <string name="normal">Normal</string>
    <string name="circular">Circular</string>
    <string name="modoColor">Seleccion de color</string>
</resources>