<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCalculadora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/botonCalculadora"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnComprobarDNI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/botonComprobarDNI"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFPantalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/botonFondoPantalla"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDomotica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/botonDomotica"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>