<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Domotica">

    <Switch
        android:id="@+id/sEncenderAoagar"
        android:layout_width="173dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/Encender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RadioGroup
        android:layout_width="149dp"
        android:layout_height="149dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respiracion" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circular" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="@string/modoColor"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sEncenderAoagar" />

    <ImageView
        android:id="@+id/ivLuzOffOn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/sEncenderAoagar"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/ic_bombillaoff" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/botonDomotica"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>