<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Logos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYahoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:gravity="center"
            android:onClick="ponerYahooLLogo"
            android:text="@string/botonYahoo" />

        <Button
            android:id="@+id/btnBing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/botonBing" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/botonGoogle" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivLogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        app:srcCompat="@drawable/yahoo" />

</LinearLayout>